# cryptographic-scratchpad

./: Cargo.toml  README.md
src/: berlekamp_massey.rs  berlekampmassey.rs  grocery_list_air.rs  main.rs  shamirs.rs
